OT132-72
Fixed conflicts with tests